Fix coordinate transformations used for computing mMouseLocation so they're relative to the root view rather than the end of the parent chain (which differ for, e.g., frames).  Add some debugging code (turned off).  b=248606  r+sr=roc